--- a/src/html/views/basket.html
+++ b/src/html/views/basket.html
@@ -81,31 +81,34 @@ title: "Заголовок | Проект",
           </div>
         </div>
 
-        <div class="item-basket-list__qty qnt-block">
-          <button type="button"
-                  class="qnt-block__btn qnt-block__btn--minus btn--clear">
-            <svg
-              width="9"
-              height="17"
-              class="qnt-block__image">
-              <use xlink:href="img/spritemap.svg#sprite-minus"></use>
-            </svg>
-          </button>
-          <div class="qnt-block__field">
-            <input
-              type="text"
-              value="2">
+        <div class="item-basket-list__qty ">
+          <div class="qnt-block">
+            <button type="button"
+                    class="qnt-block__btn qnt-block__btn--minus btn--clear">
+              <svg
+                width="9"
+                height="17"
+                class="qnt-block__image">
+                <use xlink:href="img/spritemap.svg#sprite-minus"></use>
+              </svg>
+            </button>
+            <div class="qnt-block__field">
+              <input
+                type="text"
+                value="2">
+            </div>
+
+            <button type="button"
+                    class="qnt-block__btn qnt-block__btn--plus btn--clear">
+              <svg
+                width="9"
+                height="17"
+                class="qnt-block__image">
+                <use xlink:href="img/spritemap.svg#sprite-plus "></use>
+              </svg>
+            </button>
           </div>
 
-          <button type="button"
-                  class="qnt-block__btn qnt-block__btn--plus btn--clear">
-            <svg
-              width="9"
-              height="17"
-              class="qnt-block__image">
-              <use xlink:href="img/spritemap.svg#sprite-plus "></use>
-            </svg>
-          </button>
         </div>
 
 
