--- a/src/html/views/catalog.html
+++ b/src/html/views/catalog.html
@@ -241,7 +241,7 @@ title: "Заголовок | Проект",
             </div>
             <a href="product.html"
                class="item-product__image">
-              <img src="uploads/products/1.png "
+              <img src="uploads/products/2.jpg"
                    alt="">
             </a>
             <a href="product.htm"
@@ -296,7 +296,7 @@ title: "Заголовок | Проект",
             </div>
             <a href="product.html"
                class="item-product__image">
-              <img src="uploads/products/1.png "
+              <img src="uploads/products/3.jpg "
                    alt="">
             </a>
             <a href="product.htm"
@@ -364,7 +364,7 @@ title: "Заголовок | Проект",
             </div>
             <a href="product.htm"
                class="item-product__image">
-              <img src="uploads/products/1.png "
+              <img src="uploads/products/4.jpg "
                    alt="">
             </a>
             <a href="product.htm"
