--- a/src/scss/includes/header.scss
+++ b/src/scss/includes/header.scss
@@ -26,9 +26,9 @@
         padding-bottom : 21px;
       }
       @media screen and (max-width : 560px) {
+        align-items    : flex-start;
         padding-top    : 14px;
         padding-bottom : 9px;
-        align-items : flex-start;
       }
     }
 
@@ -99,7 +99,7 @@
     }
 
     @media screen and (max-width : 767px) {
-      padding          : 8px 15px;
+      padding : 8px 15px;
     }
   }
 
@@ -208,9 +208,9 @@
     }
 
     @media screen and (max-width : 560px) {
-      margin-top: 5px;
-      margin-bottom: 10px;
-      white-space: nowrap;
+      margin-top    : 5px;
+      margin-bottom : 10px;
+      white-space   : nowrap;
     }
 
   }
@@ -302,7 +302,7 @@
   }
 
   @media screen and (max-width : 560px) {
-    margin-top: 10px;
+    margin-top : 10px;
   }
 
   // .personal-block__item
@@ -318,7 +318,7 @@
   text-decoration : none;
 
   @media screen and (max-width : 768px) {
-    margin-left     : 5px;
+    margin-left : 5px;
   }
 
 
@@ -554,7 +554,7 @@
     display : none;
   }
   @media screen and (max-width : 560px) {
-    margin-top: 13px;
+    margin-top : 13px;
   }
 }
 
@@ -692,7 +692,8 @@
 .mobile-catalog-menu {
   // .mobile-catalog-menu__item
   &__item {
-    margin : 20px 0;
+    position : relative;
+    margin   : 20px 0;
   }
 
   // .mobile-catalog-menu__link
@@ -709,6 +710,7 @@
 
     > svg {
       margin-right : 10px;
+      fill         : #fff;
     }
 
 
@@ -722,6 +724,20 @@
 
   }
 
+  // .mobile-catalog-menu__btn
+  &__btn {
+    position         : absolute;
+    top              : 5px;
+    right            : 0;
+    transition       : all 0.1s;
+    transform        : rotate(0);
+    transform-origin : center;
+
+    &.open {
+      transform : rotate(-180deg);
+    }
+  }
+
   // .mobile-catalog-menu__icon
   &__icon {
   }
@@ -731,7 +747,9 @@
   }
 }
 
+
 .mobile-catalog-sub-menu {
+  display      : none;
   padding-left : 30px;
 
   // .mobile-catalog-sub-menu__item
@@ -754,6 +772,10 @@
       color : #feb618;
     }
   }
+}
+
+.mobile-catalog-menu__btn.open + .mobile-catalog-sub-menu {
+  display : block;
 }
 
 .mobile-main-menu {
