--- a/src/scss/includes/footer.scss
+++ b/src/scss/includes/footer.scss
@@ -1,14 +1,17 @@
-.page {
-  // .page__footer
-  &__footer {
-  }
-}
-
 .footer {
   font-size        : 14px;
   padding          : 50px 0;
   color            : #fff;
   background-color : #00bc4b;
+
+  // .footer_container
+  &__container {
+    @media screen and (max-width : 1139px) {
+      display   : flex;
+      flex-wrap : wrap;
+
+    }
+  }
 
   a {
     text-decoration : none;
@@ -19,7 +22,11 @@
   &__main {
 
     @media screen and (max-width : 1139px) {
-      display : flex;
+      display         : flex;
+      align-items     : flex-start;
+      flex-grow       : 1;
+      justify-content : space-between;
+      order           : 0;
     }
 
     @media screen and (max-width : 767px) {
@@ -39,6 +46,9 @@
   &__contacts {
     margin-top : 30px;
 
+    @media screen and (max-width : 1139px) {
+      margin-top : 0;
+    }
 
     @media screen and (max-width : 767px) {
       margin-top : 40px;
@@ -48,6 +58,10 @@
   // .footer__phones
   &__phones {
     margin-top : 30px;
+
+    @media screen and (max-width : 1139px) {
+      margin-top : 0;
+    }
 
     @media screen and (max-width : 767px) {
       margin-top : 0;
@@ -60,9 +74,9 @@
     font-weight : bold;
     line-height : 1.2222;
     display     : flex;
+    align-items : center;
     margin-top  : 15px;
     color       : #fff;
-    align-items : center;
 
     svg {
       margin-right : 8px;
@@ -73,6 +87,21 @@
   &__dev {
     margin-top : 20px;
 
+    @media screen and (max-width : 1139px) {
+      display : none;
+    }
+
+    // .footer__dev--mobile
+    &--mobile {
+
+      @media screen and (min-width : 1140px) {
+        display : none;
+      }
+      @media screen and (max-width : 1139px) {
+        display : block;
+      }
+    }
+
     > a {
       font-weight : bold;
 
@@ -81,11 +110,19 @@
 
   // .footer__info
   &__info {
+    @media screen and (max-width : 1139px) {
+      order : 2;
+    }
   }
 
   // .footer__oferta
   &__oferta {
     margin-top : 19px;
+
+    @media screen and (max-width : 1139px) {
+      margin-top : 40px;
+    }
+
   }
 
   // .footer__copy
@@ -102,6 +139,7 @@
 
     @media screen and (max-width : 1139px) {
       float       : none;
+      order       : 1;
       max-width   : none;
       margin-top  : 40px;
       margin-left : 0;
@@ -134,9 +172,9 @@
     font-weight     : bold;
     line-height     : 1.2222;
 
+    display         : flex;
     margin-top      : 9px;
     text-decoration : none;
-    display : flex;
 
     svg {
       margin-right : 8px;
