--- a/src/html/views/works.html
+++ b/src/html/views/works.html
@@ -10,8 +10,14 @@ title: "Заголовок | Проект",
   <div class="works-page__inner has-sidebar">
 
     <aside class="works-page__sidebar sidebar">
+      <button class="sidebar__burger burger-sidebar" data-js-catalog-menu-btn>
+        <svg class="" width="30" height="20">
+          <use xlink:href="img/spritemap.svg#sprite-burger-sidebar"></use>
+        </svg>
+      </button>
       <div class="sidebar__block">
         <div class="sidebar__title">Наши работы</div>
+
         <ul class="sidebar__menu menu-sidebar list--clear">
           <li class="menu-sidebar__item">
             <a href=""
