--- a/src/html/views/materials.html
+++ b/src/html/views/materials.html
@@ -10,7 +10,7 @@ title: "Заголовок | Проект",
   <div class="materials__inner has-sidebar">
 
     <aside class="materials__sidebar sidebar">
-      <div class="sidebar__block">
+      <div class="sidebar__block  sidebar__block--menu">
         <div class="sidebar__title">Материалы</div>
         <ul class="sidebar__menu menu-sidebar list--clear">
           <li class="menu-sidebar__item">
