--- a/src/scss/includes/sidebar.scss
+++ b/src/scss/includes/sidebar.scss
@@ -1,11 +1,28 @@
 .sidebar {
+  position     : relative;
   flex         : 0 0 255px;
   width        : 100%;
   max-width    : 255px;
   margin-right : 30px;
 
   @media screen and (max-width : 1139px) {
-    display : none;
+    overflow      : hidden;
+    max-width     : none;
+    margin-right  : 0;
+    margin-bottom : 30px;
+    border-radius : 10px;
+  }
+  // .sidebar__burger
+  &__burger {
+    position : absolute;
+    top      : 26px;
+    right    : 20px;
+  }
+
+
+  // .sidebar.open
+  &.open {
+    height : auto;
   }
 
   // .sidebar__block
@@ -14,6 +31,18 @@
     padding          : 20px;
     border-radius    : 10px;
     background-color : #f8f8f8;
+
+    @media screen and (max-width : 1139px) {
+      display       : none;
+      margin-bottom : 0;
+
+      // .sidebar__block--menu
+      &--menu {
+        display : block;
+      }
+    }
+
+
   }
 
   // .sidebar__information
@@ -27,10 +56,14 @@
     font-size     : 26px;
     font-weight   : bold;
     line-height   : 1.2307;
-    margin        : 0 -10px;
-    padding       : 0 10px 7px;
+
     color         : #161616;
     border-bottom : 1px solid #f1f1f1;
+
+    @media screen and (max-width : 1139px) {
+      padding-right : 70px;
+      border-bottom : none;
+    }
 
   }
 
@@ -41,6 +74,24 @@
 
   // .sidebar__menu
   &__menu {
+    @media screen and (max-width : 1139px) {
+      display : none;
+    }
+  }
+}
+
+.burger-sidebar {
+
+  @media screen and (min-width : 1140px) {
+    display : none;
+  }
+
+  &.open {
+    + * {
+      .sidebar__menu {
+        display : block;
+      }
+    }
   }
 }
 
@@ -48,25 +99,26 @@
 .menu-sidebar {
   // .menu-sidebar__item
   &__item {
-    margin : 20px 0;
     position : relative;
+    margin   : 20px 0;
 
 
     &:last-child {
       margin-bottom : 0;
     }
   }
+
   // .menu-sidebar__btn
   &__btn {
-    position : absolute;
-    top : 5px;
-    right : 0;
-    transform-origin: center;
-    transform : rotate(0);
-    transition: all 0.1s;
+    position         : absolute;
+    top              : 5px;
+    right            : 0;
+    transition       : all 0.1s;
+    transform        : rotate(0);
+    transform-origin : center;
 
     > svg {
-      position    : relative;
+      position : relative;
     }
 
     // .menu-sidebar__btn.open
@@ -75,6 +127,7 @@
     }
 
   }
+
   // .menu-sidebar__link
   &__link {
     font-size       : 16px;
@@ -82,9 +135,9 @@
     line-height     : 1.25;
     display         : flex;
     align-items     : center;
+    padding-right   : 20px;
     text-decoration : none;
     color           : #161616;
-    padding-right: 20px;
 
 
     // .menu-sidebar__link--active
