--- a/src/scss/views/contacts.scss
+++ b/src/scss/views/contacts.scss
@@ -10,6 +10,10 @@
   // .contacts__form-block
   &__form-block {
     margin-top : 60px;
+
+    @media screen and (max-width : 767px) {
+      margin-top : 35px;
+    }
   }
 }
 
@@ -29,6 +33,13 @@
     left      : 40px;
     display   : inline-block;
     max-width : 325px;
+
+    @media screen and (max-width : 767px) {
+      position  : relative;
+      top       : 0;
+      left      : 0;
+      max-width : none;
+    }
   }
 }
 
@@ -68,6 +79,11 @@
   border-radius    : 10px;
   background-color : #f8f8f8;
 
+
+  @media screen and (max-width : 767px) {
+    padding : 40px 20px;
+  }
+
   // .contacts-form-block__inner
   &__inner {
     display : flex;
@@ -77,16 +93,28 @@
     }
 
 
+    @media screen and (max-width : 768px) {
+      display : block;
+    }
+
   }
 
   // .contacts-form-block__form
   &__form {
     flex : 1 1 615px;
+
+    @media screen and (max-width : 768px) {
+      margin-top : 40px;
+    }
   }
 
   // .contacts-form-block__props
   &__props {
     margin-right : 70px;
+
+    @media screen and (max-width : 768px) {
+      margin-right : 0;
+    }
   }
 
 
