--- a/src/scss/views/materials.scss
+++ b/src/scss/views/materials.scss
@@ -39,21 +39,22 @@
 
   // .materials-block__item
   &__item {
+    flex   : 0 0 calc(100% / 3 - 30px);
     margin : 0 15px 30px;
-    flex : 0 0 calc(100% / 3 - 30px);
+
 
     @media screen and (max-width : 1139px) {
       flex : 0 0 calc(100% / 2 - 30px);
     }
 
     @media screen and (max-width : 767px) {
-      margin : 0 5px 20px;
-      flex : 0 0 calc(100% / 2 - 10px);
+      flex   : 0 0 calc(100% / 2 - 10px);
+      margin : 0 0 20px;
     }
 
     @media screen and (max-width : 767px) {
+      flex   : 1 1 auto;
       margin : 0 5px 20px;
-      flex : 1 1 100%;
     }
 
     img {
