--- a/src/scss/views/forms.scss
+++ b/src/scss/views/forms.scss
@@ -134,6 +134,7 @@
     // .item-field__field--textarea
     &--textarea {
       width            : 100%;
+      min-height       : 200px;
       padding          : 14px 25px 15px;
       border           : 2px solid #ccc;
       border-radius    : 3px;
