--- a/src/scss/views/basket.scss
+++ b/src/scss/views/basket.scss
@@ -7,20 +7,20 @@
 }
 
 .basket-page {
-  // .basket-page__list
+
   text-align : left;
 
-  // .basket-page__footer
+  // .basket-page__list
   &__list {
     margin-top : 60px;
   }
 
-  // .basket-page__form-title
+  // .basket-page__footer
   &__footer {
     margin-top : 60px;
   }
 
-  // .basket-page__footer-inner
+  // .basket-page__form-title
   &__form-title {
     font-size   : 24px;
     font-weight : bold;
@@ -28,20 +28,29 @@
     color       : #161616;
   }
 
-  // .basket-page__information
+  // .basket-page__footer-inner
   &__footer-inner {
     margin-top : 40px;
   }
 
-  // .basket-page__form
+  // .basket-page__information
   &__information {
     flex        : 0 0 350px;
     margin-left : 30px;
+
+
   }
 
-  // .basket-page__form-title
+  // .basket-page__form
   &__form {
-    flex : 1 1 auto;
+    max-width : 730px;
+
+    @media screen and (max-width : 992px) {
+      padding : 35px;
+    }
+    @media screen and (max-width : 660px) {
+      padding : 35px 25px;
+    }
   }
 
 }
@@ -61,7 +70,9 @@
 
   // .basket-list__item
   &__item {
-
+    @media screen and (max-width : 992px) {
+      margin-bottom : 30px;
+    }
   }
 
   // .basket-list__footer
@@ -86,6 +97,11 @@
   padding         : 30px 0;
   border-top      : 1px solid #f8f8f8;
 
+  @media screen and (max-width : 992px) {
+    border-top    : none;
+    border-bottom : 1px solid #f8f8f8;
+  }
+
   &:last-child {
     border-bottom : 1px solid #f8f8f8;
   }
@@ -99,6 +115,15 @@
     min-width     : 380px;
     margin-right  : auto;
     padding-right : 15px;
+
+    @media screen and (max-width : 992px) {
+      display       : block;
+      flex          : 1 1 50%;
+      min-width     : 0;
+      margin-right  : 90px;
+      padding-right : 30px;
+
+    }
   }
 
 
@@ -106,14 +131,27 @@
   &__image {
     flex         : 0 0 210px;
     width        : 210px;
+    min-height   : 210px;
     max-height   : 210px;
     margin-right : 40px;
+
+    @media screen and (max-width : 992px) {
+      padding-top : 10px;
+    }
+
+    @media screen and (max-width : 660px) {
+      max-width  : 140px;
+      min-height : 0;
+    }
 
   }
 
   // .item-basket-list__info
   &__info {
 
+    @media screen and (max-width : 992px) {
+      margin-top : 15px;
+    }
 
   }
 
@@ -128,6 +166,13 @@
     text-decoration : none;
     color           : #000;
 
+    @media screen and (max-width : 992px) {
+      position      : absolute;
+      top           : 0;
+      overflow      : hidden;
+      max-height    : 40px;
+      padding-right : 30px;
+    }
 
   }
 
@@ -144,6 +189,27 @@
     padding     : 0 15px;
     white-space : nowrap;
     color       : #54585d;
+
+    @media screen and (max-width : 992px) {
+      display : none;
+    }
+
+    // .item-basket-list__prices--total
+    &--total {
+
+      @media screen and (max-width : 992px) {
+        position      : absolute;
+        top           : 123px;
+        right         : 100px;
+        display       : block;
+        padding-right : 0;
+      }
+
+      @media screen and (max-width : 660px) {
+        top   : 50px;
+        right : 0;
+      }
+    }
   }
 
   // .item-basket-list__price
@@ -169,6 +235,12 @@
   // .item-basket-list__delete
   &__delete {
     flex : 0 0 19px;
+
+    @media screen and (max-width : 992px) {
+      position : absolute;
+      top      : 0;
+      right    : 0;
+    }
   }
 
   // .item-basket-list__qty
@@ -176,6 +248,17 @@
     margin  : 0 auto;
     padding : 0 15px;
 
+    @media screen and (max-width : 992px) {
+      position      : absolute;
+      top           : 130px;
+      right         : 250px;
+      padding-right : 0;
+    }
+
+    @media screen and (max-width : 660px) {
+      top   : 100px;
+      right : 0;
+    }
 
   }
 
@@ -194,6 +277,10 @@
     line-height : 1.2142;
     color       : #9d9d9d;
 
+    @media screen and (max-width : 992px) {
+      display : none;
+    }
+
   }
 
 
@@ -201,6 +288,7 @@
   .item-basket-list__image {
     &::before {
       content : 'Товар';
+      @include basket-table-headers;
 
     }
   }
@@ -230,6 +318,8 @@
 
     // .item-basket-list__prices--total
     &--total {
+
+
       &::before {
         content : 'Сумма';
         @include basket-table-headers;
@@ -251,9 +341,29 @@
 
 
 .props-item-basket-list {
+
+
+  @media screen and (max-width : 992px) {
+    display    : flex;
+    flex-wrap  : wrap;
+    width      : calc(100vw - 80px);
+    margin-top : 20px;
+
+  }
+
   // .props-item-basket-list__item
   &__item {
     margin-bottom : 6px;
+
+    @media screen and (max-width : 992px) {
+      display         : flex;
+      flex            : 1 1 calc(50% - 15px);
+      flex-wrap       : wrap;
+      justify-content : space-between;
+    }
+    @media screen and (max-width : 660px) {
+      flex : 1 1 100%;
+    }
   }
 }
 
@@ -266,6 +376,8 @@
   // .prop-item-basket-list__name
   &__name {
     color : #9d9d9d;
+
+
   }
 
   // .prop-item-basket-list__value
