--- a/src/scss/views/order-confirm.scss
+++ b/src/scss/views/order-confirm.scss
@@ -1,6 +1,16 @@
 .order-confirm {
-  padding-top : 100px;
+  padding-top : 140px;
   text-align  : center;
+
+  @media screen and (max-width : 768px) {
+    max-width : 540px;
+    margin : 0 auto;
+    padding-top : 120px;
+  }
+
+  @media screen and (max-width : 767px) {
+    padding-top : 70px;
+  }
 
   // .order-confirm__title
   &__title {
@@ -30,7 +40,7 @@
     font-weight : bold;
     line-height : 1.2083;
     margin-top  : 45px;
-
+    padding : 10px 50px;
   }
 }
 
