--- a/src/scss/views/product.scss
+++ b/src/scss/views/product.scss
@@ -435,6 +435,8 @@
   position         : absolute;
   top              : 100%;
   display          : none;
+  overflow         : auto;
+  max-height       : 300px;
   margin-top       : 0;
   padding          : 6px 10px 6px 10px;
   border-top       : 1px solid #d8d8d8;
@@ -458,6 +460,7 @@
     height        : 28px;
     margin-right  : 10px;
     border-radius : 50%;
+
 
     > img {
       display    : inline-block;
