--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -278,6 +278,10 @@ a {
       @media screen and (max-width : 1210px) {
         left : -35px;
       }
+      @media screen and (max-width : 767px) {
+        left : -15px;
+        border-radius: 0 5px 5px 0;
+      }
     }
 
     // .products-slider__btn--next
@@ -286,6 +290,10 @@ a {
 
       @media screen and (max-width : 1210px) {
         right : -35px;
+      }
+      @media screen and (max-width : 767px) {
+        right : -15px;
+        border-radius: 5px 0 0 5px;
       }
     }
   }
