--- a/src/scss/views/product.scss
+++ b/src/scss/views/product.scss
@@ -406,7 +406,7 @@
     font-size     : 13px;
     line-height   : 1.2307;
     overflow      : hidden;
-    flex          : 0 0 170px;
+    flex          : 0 0 calc(100% - 38px);
     white-space   : nowrap;
     text-overflow : ellipsis;
   }
@@ -486,7 +486,20 @@
     position    : relative;
     top         : -13px;
     margin-left : 38px;
+  }
 
+  // .list-props-product__hidden-image
+  &__hidden-image {
+    display         : flex;
+    align-items     : center;
+    justify-content : center;
+    width           : 300px;
+    height          : 300px;
+
+    > img {
+      max-width  : 100%;
+      max-height : 100%;
+    }
   }
 }
 
@@ -577,6 +590,7 @@
   // .tabs__header
   &__header {
     display     : flex;
+    overflow-x  : auto;
     align-items : flex-start;
   }
 
