--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,6 @@
 @import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.css';
+@import '../../node_modules/tooltipster/dist/css/tooltipster.bundle.min.css';
+@import '../../node_modules/tooltipster/dist/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-light.min.css';
 
 @import 'fonts';
 @import 'includes/reset';
