--- a/src/scss/views/contacts.scss
+++ b/src/scss/views/contacts.scss
@@ -9,7 +9,9 @@
 
   // .contacts__form-block
   &__form-block {
-    margin-top : 60px;
+    margin : 60px  auto 0;
+
+    max-width: 730px;
 
     @media screen and (max-width : 767px) {
       margin-top : 35px;
