--- a/src/scss/includes/breadcrumbs.scss
+++ b/src/scss/includes/breadcrumbs.scss
@@ -1,14 +1,15 @@
 .breadcrumbs {
-  display : flex;
-  margin  : 30px 0 30px;
+  display   : flex;
+  flex-wrap : wrap;
+  margin    : 30px 0 30px;
 
   // .breadcrumbs__item
   &__item {
     font-size   : 14px;
     font-weight : 600;
     line-height : 1.2142;
+    display     : flex;
     margin      : 0;
-    display : flex;
 
     &:not(:last-child)::after {
       content : '/';
