--- a/src/html/views/materials.html
+++ b/src/html/views/materials.html
@@ -108,7 +108,11 @@ title: "Заголовок | Проект",
             <div class="item-material__price">Без доплаты</div>
           </div>
         </div>
-
+        <a href="" class="materials-block__more">
+          <svg class="" width="16" height="16">
+            <use xlink:href="img/spritemap.svg#sprite-popular-categories"></use>
+          </svg>
+          Посмотреть все цвета &gt;</a>
       </div>
       <div class="materials-block">
         <div class="materials-block__title">Варианты патины узора</div>
