--- a/src/scss/views/catalog.scss
+++ b/src/scss/views/catalog.scss
@@ -29,7 +29,7 @@
 
 .item-product {
   position         : relative;
-  padding          : 20px 20px;
+  padding          : 0 0 20px;
   border           : 2px solid #f8f8f8;
   border-radius    : 5px;
   background-color : #fff;
@@ -58,10 +58,15 @@
   // .item-product__image
   &__image {
     display         : flex;
+    overflow        : hidden;
     align-items     : center;
     justify-content : center;
+    height          : 212px;
     margin-bottom   : 20px;
-    height : 212px;
+
+    img {
+      width : 100%;
+    }
   }
 
   // .item-product__title
@@ -72,6 +77,7 @@
     display         : inline-block;
     overflow        : hidden;
     height          : 40px;
+    padding         : 0 20px;
     text-decoration : none;
     text-overflow   : ellipsis;
     color           : #161616;
@@ -85,6 +91,7 @@
     justify-content : center;
     height          : 57px;
     margin-top      : 12px;
+    padding         : 0 20px;
   }
 
   // .item-product__price
@@ -114,6 +121,7 @@
   // .item-product__actions
   &__actions {
     margin-top : 12px;
+    padding    : 0 20px;
   }
 
   // .item-product__add
